# CLOVER

./: .gitignore  LICENSE  README.md  _smoke_test_mmqa_adapter.py  _smoke_test_multitable_dsl.py  eval.py  pyproject.toml  requirements.txt  run_tests.sh
benchmarks/: ABLATION.md  __init__.py  ablation_subset.py  check_ablation_suite.py  costing.py  download.py  download_dataset.sh  download_datasets.sh  download_datasets_modelscope.sh  energy.py  eval.py  local_slm_mixed_replay.py  modelscope_download.py  modelscope_utils.py  run_ablation_suite.sh  run_databench_eval.sh  run_databench_remote_baseline.sh  run_edge_model_sweep.sh  run_final_model_tests.sh  run_financebench_eval.sh  run_financebench_remote_baseline.sh  run_orchestra_baseline.sh  run_pure_cot_baseline.sh  run_reactable_baseline.sh  run_smoke_eval.sh  run_table_agent_baseline.sh  run_tablebench_ablation.sh  run_tablebench_eval.sh  run_tablebench_remote_baseline.sh  run_vllm_eval.sh  run_vllm_eval_cloud_as_edge.sh  run_vllm_eval_clover.sh  run_vllm_eval_mmqa.sh  run_wikitq_ablation.sh  standalone_tptt_fifo_synthetic.py  start_mlx_openai_server.sh  start_vllm_openai_server.sh  summarize_ablation_suite.py  summarize_cost_accuracy.py  summarize_edge_model_sweep.py  (+3 more)
clover/: __init__.py  prompt_safety.py  reasoning_profiles.py  task_types.py
docs/: README.md  node_agent_architecture.md  pipeline_architecture.md  resource_management_architecture.md  sandbox_boundary.md  table_reasoning_architecture.md
model_config/: deepseek_remote_llm_config.json  doubao_remote_llm_config.json  local_slm_config.json  (+8 more)
(+306 files in other folders)
